--- a/docs/interni/verbali/2021_11_09_I.tex
+++ b/docs/interni/verbali/2021_11_09_I.tex
@@ -1,10 +1,15 @@
 \documentclass[a4paper,12pt]{article}
+\author{}
+\date{}
 \begin{document}
 
 % Verbale del 09/11/2021
 % Stesura documento: Alberto, revisione e conversione in latex: Andrea
 
-\section{Informazioni generali}
+\title{Verbale del 9/11/2021}
+\maketitle
+
+\section{Informazioni}
 
 \begin{itemize}
 \item Data: 9/11/2021
