--- a/docs/interni/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\input{../../template/front_page}
+%\input{../../template/front_page}
 
 \section{Introduzone}
 \subsection{Scopo del documento}
@@ -150,6 +150,37 @@ Ogni verbale deve riportare:
 \subsection{Configurazione}
 
 \subsubsection{Repository GitHub}
+
+Ogni componente del gruppo clonera il repo in locale:\\
+	\texttt{git clone https://github.com/iota97/WinningSoftwareSolution}\\\\
+
+Workflow per la modifica del repo:
+\begin{itemize}
+\item Per creare una modifica al repo prima sincronizzare all'ultima versione del remote\\
+	\texttt{git pull};
+\item Selezionare la branch main\\
+	\texttt{git checkout main};
+\item Creare una nuova branch nel formato $<$iniziali\_nome\_cognome$>$-$<$nome\_branch$>$\\
+	\texttt{git branch gc-istruzioni-git};
+\item Passare alla branch specificata\\
+	\texttt{git checkout gc-istruzioni-git};
+\item Creare le modifiche necessarie;
+\item Aggiungere le modifiche alla stage area\\
+	\texttt{git add .};
+\item Creare il commit con le modifiche\\
+	\texttt{git commit};
+\item Pushare sul remote la nuova branch\\
+	\texttt{git push --set-upstream origin gc-istruzioni-git};
+\item Da GitHub creare la PR;
+\item Se necessarie ulteriori modifiche modificare i file e pushare i cambiamenti\\
+	\texttt{git push}.
+\end{itemize}
+
+\textbf{NB}: Prima di pushare usare \texttt{git status} per verificare di essere nella branch corretta etc...\\\\
+Una persona diversa da quella che ha creato la PR si occuperà della review.\\
+Tramite l'interfaccia web di Github commenterà se sono necessarie modifiche; una volta approvata procederà al merge.\\\\
+Una volta che la PR è stata accettata il creatore eliminera la branch non più necessaria (GitHub mette il tasto a disposizione sulla pagina della PR una volta mergiata).
+
 
 % Ogni altro file generato dal compilatore \LaTeX non dovrà essere considerato. 
 
