--- a/docs/interni/verbali/2021_11_02_E/2021_11_02_E.tex
+++ b/docs/interni/verbali/2021_11_02_E/2021_11_02_E.tex
@@ -37,9 +37,9 @@ I membri del gruppo presenti al meeting si sono rapidamente presentati, così co
 
 \item \textbf{Quantità di dati sottoposta all'analisi.} Il proponente ha spiegato che la quantità può essere variabile, ma un esempio realistico è: 10 linee di produzione con 10 pezzi al secondo, ogni pezzo con 10 misure: 1000 misurazioni al secondo. Il proponente ha comunque sottolineato che il software deve essere scalabile.
 
-\item \textbf{Generazione carte di controllo.} Il dubbio era tra generazione automatica o solo alla richiesta dell'utente. Il proponente ha chiarito che l'analisi è fatta in automatico all'arrivo di nuovi dati da analizzare. Le relative carte di controllo sono quindi in costante aggiornamento, anche per controllare fenomeni di tendenze, ma mostrate graficamente all'utente solo su richiesta.
+\item \textbf{Generazione carte di controllo.} Il dubbio era tra generazione automatica o solo alla richiesta dell'utente. Il proponente ha chiarito che l'analisi è fatta in automatico all'arrivo di nuovi dati da analizzare. Le relative carte di controllo sono quindi in costante aggiornamento, anche per controllare l'andamento, ma mostrate graficamente all'utente solo su richiesta.
 
-\item \textbf{Caratteristiche dei dati da analizzare.} Anche se le misurazioni nella produzione possono essere fatte su vari prodotti, comunque si tratta di misure simili tra loro (esempio: diametro di un foro, lunghezza di un lato). Chiaramente, vengono prodotti svariati pezzi per ogni tipo per avere un campione di dati sufficente su cui misurare una tendenza statistica. É stato fatto notare che nella realtà i dati potrebbero essere dipendenti tra loro, ma il software non riconosce questa proprietà .
+\item \textbf{Caratteristiche dei dati da analizzare.} Anche se le misurazioni nella produzione possono essere fatte su vari prodotti, comunque si tratta di misure simili tra loro (esempio: diametro di un foro, lunghezza di un lato). Chiaramente, vengono prodotti svariati pezzi per ogni tipo per avere un campione di dati sufficente su cui misurare una tendenza statistica. É stato fatto notare che nella realtà i dati potrebbero essere dipendenti tra loro, ma il software non riconosce questa proprietà.
 
 \end{itemize}
 
