Fixed version + norme merge github

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -6,7 +6,6 @@
 
 \settitolo{Norme di progetto}
 \setredattori{Elia Scandaletti}
-\setversione{0.0.0}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -196,7 +195,9 @@ Ogni modifica alla repository dovrà seguire i seguenti passaggi:
 
 Prima di effettuare un push alla repository remota o un merge al branch \texttt{main} è necessario fare uno squash dei commit superflui.
 
-Chi effettua la modifica, chi fa la review e chi accetta il merge devono essere tre membri del gruppo distinti.
+Chi effettua la modifica e chi fa la review devono essere membri del gruppo distinti.
+
+Chi effettua la review può accettare la pull request.
 
 Dopo che è stato fatto il merge di una pull request, il corrispondente branch va eliminato.
 
