Fixed vspace in front_page + typo

--- a/docs/template/front_page.tex
+++ b/docs/template/front_page.tex
@@ -21,7 +21,7 @@
 
 		\includegraphics[width=0.4\textwidth]{../../template/WSWS-logos_transparent_crop}\\
 
-		{\Large Winning Software Solution}\\
+		{\Large Winning Software Solution}\\[6pt]
 		\href{mailto://winningsoftwaresolution@gmail.com}{winningsoftwaresolution@gmail.com}\\
 		
 		\ifdefined\progetto
