--- a/docs/template/history.tex
+++ b/docs/template/history.tex
@@ -2,21 +2,27 @@
 \usepackage{array}
 \usepackage{tabularx}
 
-\def\vers#1-#2-#3-#4-#5\\{#1&#2&#3&#4&#5\\\hline}
-
+\newcounter{verscount}
+\setcounter{verscount}{0}
 \newcommand{\addversione}[5]{
 	\ifdefined\setversione
 		\setversione{#1}
 	\else\fi
-	\ifdefined\versioni
-		\let\old\versioni
-		\renewcommand{\versioni}{#1&#2&#3&#4&#5\\\hline\old}
-	\else
-		\newcommand{\versioni}{#1&#2&#3&#4&#5\\\hline}
-	\fi
+	\stepcounter{verscount}
+	\expandafter\newcommand%
+		\csname ver\theverscount \endcsname{#1&#2&#3&#4&#5}
 }
 
-\newcommand{\setversioni}[1]{\newcommand{\versioni}{#1}}
+\newcommand{\listversioni}{
+	\ifnum\value{verscount}>1
+		\csname ver\theverscount \endcsname
+		\addtocounter{verscount}{-1}
+		\\\hline
+		\listversioni
+	\else
+		\csname ver\theverscount \endcsname\\\hline
+	\fi
+}
 
 \newcommand{\makeversioni}{
 	\begin{center}
@@ -24,7 +30,7 @@
 		\hline
 		\textbf{Versione} & \textbf{Data} & \textbf{Persona} & \textbf{Attivtà} & \textbf{Descrizione} \\
 		\hline
-		\versioni
+		\listversioni
 		\end{tabularx}
 	\end{center}
 	\clearpage
