--- a/docs/interni/motivazioni_della_scelta/motivazioni_della_scelta.tex
+++ b/docs/interni/motivazioni_della_scelta/motivazioni_della_scelta.tex
@@ -5,7 +5,8 @@
 \input{../../template/history}
 
 \settitolo{Motivazioni scelta capitolato}
-\setredattori{Andrea Volpe, Giovanni Cocco}
+\setredattori{Andrea Volpe\\Giovanni Cocco}
+\setrevisori{Elia Scandaletti}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento contiene le motivazioni della scelta del capitolato C2.
@@ -13,6 +14,7 @@ Questo documento contiene le motivazioni della scelta del capitolato C2.
 
 \addversione{0.0.0}{15/11/2021}{Andrea Volpe}{Redazione}{Stesura \ref{scelta}}
 \addversione{0.0.1}{15/11/2021}{Giovanni Cocco}{Redazione}{Intestazione e versioni}
+\addversione{0.1.0}{15/11/2021}{Elia Scandaletti}{Revisione}{Adeguamento a norme di progetto}
 
 \begin{document}
 
@@ -23,10 +25,10 @@ Questo documento contiene le motivazioni della scelta del capitolato C2.
 \section{Scelta}\label{scelta}
 Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti motivi:
 \begin{itemize}
-\item Interesse personale dei membri verso le reti peer-to-peer e i contratti digitali. 
-\item La propensione al dialogo e al confronto da parte del proponente.
-\item Rilevante presenza di possibilità di ricerca e studio sulle tecnologie da usare.
-\item Possibilità di integrazione del sistema di pagamento presso enti o aziende interessate ad utilizzarlo
+\item Interesse personale dei membri verso le reti peer-to-peer e i contratti digitali;
+\item La propensione al dialogo e al confronto da parte del proponente;
+\item Rilevante presenza di possibilità di ricerca e studio sulle tecnologie da usare;
+\item Possibilità di integrazione del sistema di pagamento presso enti o aziende interessate ad utilizzarlo;
 \item Il proponente ha reso chiara la sua disponibilità e propensione a partecipare attivamente alle varie fasi dello sviluppo del progetto, dimostrando interesse verso la ricerca collettiva di soluzioni ai problemi affrontati.
 \end{itemize}
 
