Bugfix relative path

--- a/docs/interni/motivazioni_della_scelta/motivazioni_della_scelta.tex
+++ b/docs/interni/motivazioni_della_scelta/motivazioni_della_scelta.tex
@@ -1,8 +1,9 @@
 \documentclass[a4paper, 12pt]{article}
 
-\input{../../template/style}
-\input{../../template/front_page}
-\input{../../template/history}
+\newcommand{\templates}{../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
 
 \settitolo{Motivazioni scelta capitolato}
 \setredattori{Andrea Volpe\\Giovanni Cocco}
