--- a/docs/template/front_page.tex
+++ b/docs/template/front_page.tex
@@ -19,7 +19,7 @@
 	\begin{titlepage}
 		\begin{center}
 
-		\includegraphics[width=0.4\textwidth]{../../template/WSWS-logos_transparent_crop}\\
+		\includegraphics[width=0.4\textwidth]{\templates/WSWS-logos_transparent_crop}\\
 
 		{\Large Winning Software Solution}\\[6pt]
 		\href{mailto://winningsoftwaresolution@gmail.com}{winningsoftwaresolution@gmail.com}\\
