--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -188,7 +188,7 @@ La repository \url{https://github.com/iota97/WinningSoftwareSolution} conterrà 
 Ogni modifica alla repository dovrà seguire i seguenti passaggi:
 \begin{itemize}
 \item modifica del codice su repository locale;
-\item push su un branch ad hoc nominato \texttt{$<$iniziali\_autore$>$\_$<$descrizione$>$};
+\item push su un branch ad hoc nominato \texttt{$<$iniziali\_autore$>$-$<$descrizione$>$};
 \item pull request tramite piattaforma web GitHub;
 \item review della pull request;
 \item merge sul branch \texttt{main}.
