--- a/docs/esterni/candidatura/candidatura.tex
+++ b/docs/esterni/candidatura/candidatura.tex
@@ -13,15 +13,11 @@
 Questo documento contiene le motivazioni della scelta del capitolato C2.
 }
 
-\addversione{0.0.0}{15/11/2021}{Andrea Volpe}{Redazione}{Stesura \ref{scelta}}
-\addversione{0.0.1}{15/11/2021}{Giovanni Cocco}{Redazione}{Intestazione e versioni}
-\addversione{0.1.0}{15/11/2021}{Elia Scandaletti}{Revisione}{Adeguamento a norme di progetto}
-
 \begin{document}
 
 \makefrontpage
 
-\makeversioni
+%\makeversioni
 
 \section{Scelta}\label{scelta}
 Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti motivi:
@@ -32,5 +28,32 @@ Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti moti
 \item Possibilità di integrazione del sistema di pagamento presso enti o aziende interessate ad utilizzarlo;
 \item Il proponente ha reso chiara la sua disponibilità e propensione a partecipare attivamente alle varie fasi dello sviluppo del progetto, dimostrando interesse verso la ricerca collettiva di soluzioni ai problemi affrontati.
 \end{itemize}
+
+\section{Preventivo}\label{preventivo}
+\begin{tabular}{|c|c|c|c|}
+    \hline
+    \textbf{Ruolo} & \textbf{Costo orario (€)} & \textbf{Ore} & \textbf{Prezzo (€)}\\
+    \hline
+    Responsabile & 30 & 80 & 2400\\
+    \hline
+    Amministratore & 20 & 60 & 1200\\
+    \hline
+    Analista & 25 & 120 & 3000\\
+    \hline
+    Progettista & 25 & 150 & 3750\\
+    \hline
+    Programmatore & 15 & 150 & 2250\\
+    \hline
+    Verificatore & 15 & 100 & 1500\\
+    \hline\hline
+    \multicolumn{2}{|c|}{\textbf{Scadenza consegna}} & \textbf{Ore tot.} & \textbf{Preventivo finale (€)}\\
+    \hline
+    \multicolumn{2}{|c|}{29/04/2021} & 660 & 14100\\
+    \hline
+\end{tabular}\\\\
+
+Calcolando un lavoro individuale di 95 ore e una media di 7 ore a settimana
+si lavora 14 settimane ovvero circa 3 mesi e mezzo partendo dalla fine di novembre
+si arriva a metà marzo, abbiamo considerato più di un mese di lasco per imprevisti/impegni personali.
 
 \end{document}
