--- a/docs/esterni/candidatura/candidatura.tex
+++ b/docs/esterni/candidatura/candidatura.tex
@@ -5,12 +5,12 @@
 \input{\templates/front_page}
 \input{\templates/history}
 
-\settitolo{Motivazioni scelta capitolato}
+\settitolo{Candidatura al capitolato C2}
 \setredattori{Andrea Volpe\\Giovanni Cocco}
 \setrevisori{Elia Scandaletti}
 \setdestuso{esterno}
 \setdescrizione{
-Questo documento contiene le motivazioni della scelta del capitolato C2.
+Questo documento descrive la candidatura al capitolato C2.
 }
 
 \begin{document}
