--- a/docs/esterni/candidatura/candidatura.tex
+++ b/docs/esterni/candidatura/candidatura.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper, 12pt]{article}
+\usepackage{eurosym}
 
 \newcommand{\templates}{../../template}
 \input{\templates/style}
@@ -17,8 +18,6 @@ Questo documento descrive la candidatura al capitolato C2.
 
 \makefrontpage
 
-%\makeversioni
-
 \section{Scelta}\label{scelta}
 Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti motivi:
 \begin{itemize}
@@ -32,7 +31,7 @@ Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti moti
 \section{Preventivo}\label{preventivo}
 \begin{tabular}{|c|c|c|c|}
     \hline
-    \textbf{Ruolo} & \textbf{Costo orario (€)} & \textbf{Ore} & \textbf{Prezzo (€)}\\
+    \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
     \hline
     Responsabile & 30 & 80 & 2400\\
     \hline
@@ -46,14 +45,13 @@ Il gruppo ha scelto il capitolato C2 dell’azienda Sync Lab per i seguenti moti
     \hline
     Verificatore & 15 & 100 & 1500\\
     \hline\hline
-    \multicolumn{2}{|c|}{\textbf{Scadenza consegna}} & \textbf{Ore tot.} & \textbf{Preventivo finale (€)}\\
+    \multicolumn{2}{|c|}{\textbf{Scadenza consegna}} & \textbf{Ore tot.} & \textbf{Preventivo finale (\euro)}\\
     \hline
     \multicolumn{2}{|c|}{29/04/2021} & 660 & 14100\\
     \hline
-\end{tabular}\\\\
+\end{tabular}\\[8pt]
 
-Calcolando un lavoro individuale di 95 ore e una media di 7 ore a settimana
-si lavora 14 settimane ovvero circa 3 mesi e mezzo partendo dalla fine di novembre
-si arriva a metà marzo, abbiamo considerato più di un mese di lasco per imprevisti/impegni personali.
+Calcolando un lavoro individuale di 95 ore e una media di 7 ore a settimana a testa, si lavora 14 settimane, ovvero circa 3 mesi e mezzo.
+Partendo dalla fine di novembre, si arriva a metà marzo. Abbiamo considerato un mese e mezzo di lasco per imprevisti e impegni personali.
 
 \end{document}
