Adeguamento a norme di stile

--- a/docs/interni/verbali/2021_10_28_E/2021_10_28_E.tex
+++ b/docs/interni/verbali/2021_10_28_E/2021_10_28_E.tex
@@ -1,16 +1,25 @@
-\documentclass[a4paper,12pt]{article}
-\author{}
-\date{}
+\documentclass[a4paper, 12pt]{article}
+
+\newcommand{\templates}{../../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
+
+\settitolo{Verbale del 28/10/2021 con SyncLab}
+\setredattori{Matteo Galvagni}
+\setdestuso{interno}
+\setdescrizione{
+Verbale dell'incontro del 28/10/2021 con l'azienda SyncLab. 
+}
 
 \begin{document}
-\title{Verbale del 28/10/2021 con SyncLab}
-\maketitle
+
+\makefrontpage
 
 \section{Informazioni}
 \textbf{Data}: 28/10/2021\\
 \textbf{Durata}: 45 minuti\\
-\textbf{Luogo}: Aula virtuale \textit{Google Meet}\\\\
-
+\textbf{Luogo}: Aula virtuale Google Meet\\
 \textbf{Partecipanti}:
 \begin{itemize}
 	\item Andrea Volpe
@@ -32,7 +41,7 @@
 \section{Svolgimento}
 
 \subsection{Presentazioni}
-I membri del gruppo presenti al meeting si sono rapidamente presentati, così come il rappresentante dell'azienda \textit{Synclab} Fabio Pallaro.
+I membri del gruppo presenti al meeting si sono rapidamente presentati, così come il rappresentante dell'azienda Synclab, Fabio Pallaro.
 
 \subsection{Riassunto delle richieste del proponente}
 È stato fatto un breve riassunto delle richieste relative al progetto e delle modalità di svolgimento, al fine di inquadrare al meglio le aspettative del proponente.
