--- a/docs/interni/verbali/2021_11_02_E/2021_11_02_E.tex
+++ b/docs/interni/verbali/2021_11_02_E/2021_11_02_E.tex
@@ -1,15 +1,25 @@
-\documentclass[a4paper,12pt]{article}
-\author{}
-\date{}
+\documentclass[a4paper, 12pt]{article}
+
+\newcommand{\templates}{../../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
+
+\settitolo{Verbale del 02/11/2021 con Sanmarco Informatica}
+\setredattori{Matteo Galvagni}
+\setdestuso{interno}
+\setdescrizione{
+Verbale dell'incontro del 02/11/2021 con l'azienda Sanmarco Informatica. 
+}
 
 \begin{document}
-\title{Verbale del 2/11/2021 con Sanmarco Informatica}
-\maketitle
+
+\makefrontpage
 
 \section{Informazioni}
 \textbf{Data}: 2/11/2021\\
 \textbf{Durata}: 25 minuti\\
-\textbf{Luogo}: Aula virtuale \textit{Google Meet}\\\\
+\textbf{Luogo}: Aula virtuale Google Meet\\
 \textbf{Partecipanti}:
 \begin{itemize}
 	\item Albero Nicoletti;
@@ -29,7 +39,7 @@
 \section{Svolgimento}
 
 \subsection{Presentazioni}
-I membri del gruppo presenti al meeting si sono rapidamente presentati, così come il rappresentante dell'azienda \textit{Sanmarco Informatica} Magnabosco Marco.
+I membri del gruppo presenti al meeting si sono rapidamente presentati, così come il rappresentante dell'azienda Sanmarco Informatica, Magnabosco Marco.
 
 \subsection{Domande da parte del gruppo al proponente}
 
