--- a/docs/interni/verbali/2021_11_09_I/2021_11_09_I.tex
+++ b/docs/interni/verbali/2021_11_09_I/2021_11_09_I.tex
@@ -1,13 +1,21 @@
-\documentclass[a4paper,12pt]{article}
-\author{}
-\date{}
+\documentclass[a4paper, 12pt]{article}
+
+\newcommand{\templates}{../../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
+
+\settitolo{Verbale del 09/11/2021}
+\setredattori{Alberto Nicoletti}
+\setrevisori{Andrea Volpe}
+\setdestuso{interno}
+\setdescrizione{
+Verbale dell'incontro del 09/11/2021. 
+}
+
 \begin{document}
 
-% Verbale del 09/11/2021
-% Stesura documento: Alberto, revisione e conversione in latex: Andrea
-
-\title{Verbale del 9/11/2021}
-\maketitle
+\makefrontpage
 
 \section{Informazioni}
 
@@ -28,7 +36,10 @@
 \end{itemize}
 
 \section{Ordine del giorno}
-Definire i primi documenti da stilare e gli strumenti da usare.
+\begin{enumerate}
+\item Definire i primi documenti da stilare e gli strumenti da usare;
+\item Varie ed eventuali.
+\end{enumerate}
 
 \section{Riassunto dei contenuti}
 
