--- a/docs/interni/verbali/2021_11_12_E/2021_11_12_E.tex
+++ b/docs/interni/verbali/2021_11_12_E/2021_11_12_E.tex
@@ -20,7 +20,7 @@ Verbale dell'incontro del 12/11/2021 con l'azienda SyncLab.
 \section{Informazioni}
 \textbf{Data}: 12/11/2021\\
 \textbf{Durata}: 45 minuti\\
-\textbf{Luogo}: Aula Virtuale \textit{Google Meet}\\\\
+\textbf{Luogo}: Aula Virtuale Google Meet\\
 
 \textbf{Partecipanti}
 \begin{itemize}
@@ -35,8 +35,8 @@ Verbale dell'incontro del 12/11/2021 con l'azienda SyncLab.
 
 \section{Ordine del giorno}
 \begin{enumerate}
-	\item Domande da parte del gruppo al proponente.
-	\item Varie ed eventuali
+	\item Domande da parte del gruppo al proponente;
+	\item Varie ed eventuali.
 \end{enumerate}
 
 \section{Svolgimento}
