--- a/docs/interni/verbali/2021_11_12_I/2021_11_12_I.tex
+++ b/docs/interni/verbali/2021_11_12_I/2021_11_12_I.tex
@@ -1,13 +1,21 @@
-\documentclass[a4paper,12pt]{article}
-\author{}
-\date{}
+\documentclass[a4paper, 12pt]{article}
+
+\newcommand{\templates}{../../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
+
+\settitolo{Verbale del 12/11/2021}
+\setredattori{Alberto Nicoletti}
+\setrevisori{Andrea Volpe}
+\setdestuso{interno}
+\setdescrizione{
+Verbale dell'incontro del 12/11/2021. 
+}
+
 \begin{document}
 
-% Verbale del 09/11/2021
-% Stesura documento: Alberto, revisione e conversione in latex: Andrea
-
-\title{Verbale del 12/11/2021}
-\maketitle
+\makefrontpage
 
 \section{Informazioni}
 
@@ -29,28 +37,29 @@
 
 \section{Ordine del giorno}
 \begin{enumerate}
-    \item Proseguire la stesura del documento "\textit{Norme di Progetto}".
-    \item Assegnare il compito della stesura dei verbali.
+    \item Proseguire la stesura del documento \textit{Norme di Progetto};
+    \item Assegnare il compito della stesura dei verbali;
+    \item Varie ed eventuali.
 \end{enumerate}
 
 \section{Riassunto dei contenuti}
 
 
-\subsection{Stesura "\textit{Norme di progetto}"} 
-Il documento "\textit{Norme di progetto}" è stato aggiornato con l'aggiunta delle sezioni:
+\subsection{Stesura \textit{Norme di progetto}} 
+Il documento \textit{Norme di progetto} è stato aggiornato con l'aggiunta delle sezioni:
 \begin{itemize}
     \item \textit{Struttura dei documenti};
     \item \textit{Documenti}.
 \end{itemize}
 \subsection{Stesura verbali}
 \begin{itemize}
-    \item Andrea Volpe e Federico Marchi si occuperanno del verbale dell'incontro con \textit{Synclab} del 12/11/2021.
+    \item Andrea Volpe e Federico Marchi si occuperanno del verbale dell'incontro con Synclab del 12/11/2021;
     \item Raffaele Oliviero si occuperà di aggiornare il verbale del 02/11/2021 e del verbale interno odierno.
 \end{itemize}
 
 \section{Impegni presi}
 \begin{itemize}
-\item Creare il template dell'intestazione.
+\item Creare il template dell'intestazione;
 \item Stilare i verbali degli incontri con proponenti.
 \end{itemize}
 
