--- a/docs/interni/verbali/2021_11_13_I/2021_11_13_I.tex
+++ b/docs/interni/verbali/2021_11_13_I/2021_11_13_I.tex
@@ -1,13 +1,20 @@
-\documentclass[a4paper,12pt]{article}
-\author{}
-\date{}
+\documentclass[a4paper, 12pt]{article}
+
+\newcommand{\templates}{../../../template}
+\input{\templates/style}
+\input{\templates/front_page}
+\input{\templates/history}
+
+\settitolo{Verbale del 13/11/2021}
+\setredattori{Alberto Nicoletti}
+\setdestuso{interno}
+\setdescrizione{
+Verbale dell'incontro del 13/11/2021. 
+}
+
 \begin{document}
 
-% Verbale del 13/11/2021
-% Stesura documento: Alberto
-
-\title{Verbale del 9/11/2021}
-\maketitle
+\makefrontpage
 
 \section{Informazioni}
 
@@ -27,7 +34,10 @@
 \end{itemize}
 
 \section{Ordine del giorno}
-Discutere il contenuto dei documenti da presentare per la candidatura, ed iniziarne la stesura.
+\begin{enumerate}
+\item Discutere il contenuto dei documenti da presentare per la candidatura, ed iniziarne la stesura;
+\item Varie ed eventuali.
+\end{enumerate}
 
 \section{Riassunto dei contenuti}
 
