--- a/docs/interni/verbali/2021_12_01_I/2021_12_01_I.tex
+++ b/docs/interni/verbali/2021_12_01_I/2021_12_01_I.tex
@@ -103,9 +103,9 @@ Infine, Andrea Volpe ha suggerito l'uso di GitHub Issues per tenere traccia dei 
 	\item Elia Scandaletti: responsabile;
 	\item Raffaele Oliviero: amministratore;
 	\end{itemize}
-\item verificatore:
+\item verifica:
 	\begin{itemize}
-	\item Giovanni Cocco.
+	\item Giovanni Cocco: verificatore.
 	\end{itemize}
 \end{itemize}
 
