Aggiunto capitolato a frontespizio

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -6,6 +6,8 @@
 \input{\templates/history}
 
 \settitolo{Norme di progetto}
+\setprogetto{ShopChain}
+\setcommittenti{SyncLab}
 \setredattori{Elia Scandaletti}
 \setdestuso{interno}
 \setdescrizione{
@@ -14,6 +16,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 
 \addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione}}
 \addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{configurazione-github}}
+\addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021}
 
 \begin{document}
 
